tests/snippets/errors/redecl.rs
fn main() {
    let a = 1u8;
    let a = 2u8;
}